--- a/scss/base/_colores.scss
+++ b/scss/base/_colores.scss
@@ -2,3 +2,5 @@ $bg-darkblue: rgba(0, 0, 107, 0.836);
 $text-color: white;
 $text-color1:rgb(148, 180, 228);
 $text-color2:rgb(199, 199, 199);
+$text-color3: black;
+$bg-black: black;
