--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,4 @@
-@import"../base/variables";
-@import"../base/colores";
-@import"../base/listas";
-@import"../componentes/componentes";
+@import"./base/restodelcodigo";
+@import"./base/colores";
+@import"./base/listas";
+@import"./componentes/componentes"; 
