--- a/scss/base/_colores.scss
+++ b/scss/base/_colores.scss
@@ -4,3 +4,14 @@ $text-color1:rgb(148, 180, 228);
 $text-color2:rgb(199, 199, 199);
 $text-color3: black;
 $bg-black: black;
+$color-c: #1d3461;
+$color-c1: #1f487e;
+$color-c2: #376996;
+$color-c3: #6290c8;
+$color-c4: #829cbc;
+
+
+
+
+
+
