--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @import"./base/restodelcodigo";
 @import"./base/colores";
 @import"./base/listas";
-@import"./componentes/componentes"; 
+@import"./base/displays";
+@import"./componentes/variables"; 
