--- a/css/style.css
+++ b/css/style.css
@@ -345,29 +345,32 @@ body {
 }
 
 header {
-  background-color: rgba(0, 0, 107, 0.836);
+  background-color: #1d3461;
 }
 header a {
   color: white;
 }
 
 section div h1 {
-  color: white;
+  color: #829cbc;
   Font-size: 150px;
   text-align: center;
+  font-family: "Source Sans Pro";
 }
 section div h4 {
   color: rgb(148, 180, 228);
   background-color: rgba(0, 0, 107, 0.836);
   text-align: center;
   font-size: 20px;
-  margin: 20px;
+  margin-top: 70px;
 }
 section div p {
   color: white;
   text-align: center;
   background-color: rgba(0, 0, 107, 0.836);
-  margin: 100px;
+  margin-top: 100px;
+  width: 150px;
+  display: flex;
 }
 
 footer {
