--- a/css/style.css
+++ b/css/style.css
@@ -1,68 +1,4 @@
 /*SERVICIO*/
-.divUnoS {
-  height: 100px;
-  margin-top: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.servicioH1 {
-  font-size: 70px;
-  border: 2px solid black;
-  background-color: rgba(0, 0, 99, 0.705);
-}
-
-.divDosS {
-  height: 500px;
-  display: flex;
-  justify-content: center;
-}
-
-.fabrica {
-  height: 500px;
-  width: 800px;
-}
-
-.divTresS {
-  background-color: rgba(0, 0, 70, 0.932);
-  height: 80px;
-  text-align: center;
-  font-size: 15px;
-  font-style: italic;
-  border: 2px solid rgb(2, 0, 95);
-  display: flex;
-  justify-content: center;
-  margin-top: 30px;
-  animation: cambiofondoinfinito 10s infinite;
-  color: rgb(0, 0, 99);
-  font-family: "roboto";
-}
-
-@keyframes cambiofondoinfinito {
-  0% {
-    background-color: rgb(255, 255, 255);
-  }
-  20% {
-    background-color: rgb(189, 189, 255);
-  }
-  40% {
-    background-color: rgb(119, 128, 255);
-  }
-  60% {
-    background-color: rgb(88, 88, 255);
-  }
-  80% {
-    background-color: rgb(189, 189, 255);
-  }
-  100% {
-    background-color: rgb(255, 255, 255);
-  }
-}
-.parrafoS {
-  color: rgb(0, 0, 109);
-}
-
 .divCuatroS {
   height: 30px;
   margin-top: 30px;
@@ -126,15 +62,6 @@ table tr td {
 .iframe {
   margin-top: 20px;
   margin-bottom: 20px;
-}
-
-.footerDosF {
-  height: 50px;
-  color: white;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: flex-end;
 }
 
 /*CONTACTO*/
@@ -342,42 +269,159 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   font-family: "Hubballi";
+  box-sizing: border-box;
+}
+
+.sectionIndex {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr;
+  grid-template-areas: "imgIndex" "parIndex" "imgIndex1" "parIndex1";
+}
+
+section {
+  color: white;
+  border: 1px solid white;
+  background-color: rgba(255, 255, 255, 0.568);
+  display: flex;
+  justify-content: flex-end;
+  height: 27px;
 }
 
 header {
   background-color: #1d3461;
 }
-header a {
-  color: white;
-}
-
-section div h1 {
-  color: #829cbc;
-  Font-size: 150px;
-  text-align: center;
-  font-family: "Source Sans Pro";
-}
-section div h4 {
-  color: rgb(148, 180, 228);
-  background-color: rgba(0, 0, 107, 0.836);
-  text-align: center;
-  font-size: 20px;
-  margin-top: 70px;
-}
-section div p {
-  color: white;
-  text-align: center;
-  background-color: rgba(0, 0, 107, 0.836);
-  margin-top: 100px;
-  width: 150px;
-  display: flex;
-}
-
-footer {
-  color: white;
-  background-color: rgba(0, 0, 107, 0.836);
+header nav div {
   display: flex;
   justify-content: flex-start;
+}
+header nav div a {
+  color: white;
+}
+
+.sizeImg {
+  height: 25px;
+  width: 30px;
+}
+
+div {
+  display: flex;
+  justify-content: center;
+}
+div img {
+  height: 150px;
+  width: 400px;
+  margin: 30px;
+}
+
+main {
+  color: #6290c8;
+  text-align: center;
+}
+main div h4 {
+  background-color: #1d3461;
+  text-align: center;
+  padding: 10px;
+}
+main div p {
+  background-color: #1d3461;
+  height: 40px;
+  padding: 5px;
+}
+
+.mainIndex {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: 150px 100px 20px;
+}
+
+.div1 {
+  grid-column: 1/3;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.div2 {
+  grid-column: 1/3;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.footer1 {
+  grid-column: 1/2;
+  position: absolute;
+  bottom: 0;
+  background-color: #1f487e;
+  margin: 0;
+}
+
+/*SERVICIO*/
+h1 {
+  color: white;
+  background-color: #1d3461;
+  height: 80px;
+  font-size: 70px;
+  font-family: "big shoulders display";
+  margin-top: 20px;
+}
+
+.divDosS {
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+.fabrica {
+  height: 500px;
+  width: 800px;
+}
+
+.divTresS {
+  height: 80px;
+  text-align: center;
+  font-size: 15px;
+  font-style: italic;
+  border: 2px solid rgb(2, 0, 95);
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+  animation: cambiofondoinfinito 10s infinite;
+  color: rgb(0, 0, 99);
+  font-family: "roboto";
+}
+
+@keyframes cambiofondoinfinito {
+  0% {
+    background-color: #1d3461;
+  }
+  20% {
+    background-color: #1f487e;
+  }
+  40% {
+    background-color: #376996;
+  }
+  60% {
+    background-color: #6290c8;
+  }
+  80% {
+    background-color: #376996;
+  }
+  100% {
+    background-color: #1f487e;
+  }
+}
+.parrafoS {
+  color: rgb(0, 0, 109);
+}
+
+.footerDos {
+  background-color: #1d3461;
+  color: white;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
 }
 
 /*# sourceMappingURL=style.css.map */
