--- a/scss/base/_displays.scss
+++ b/scss/base/_displays.scss
@@ -4,13 +4,13 @@
     align-items: center;
 }
 
-%bordes:{
+%bordes{
     border: 2px solid #1d3461;
 }
 
-%display{
+%display1{
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+
 }
