--- a/scss/componentes/_variables.scss
+++ b/scss/componentes/_variables.scss
@@ -5,48 +5,174 @@ body{
         background-repeat: no-repeat;
         background-size: cover;
         font-family:'Hubballi';
+        box-sizing: border-box;
+        
+    }
+    
+    .sectionIndex{
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
+        grid-template-rows: 1fr; 
+        grid-template-areas: 
+        "imgIndex" "parIndex" "imgIndex1" "parIndex1";
+            }
+
+    section{
+        color: $text-color;
+        border: 1px solid $text-color;
+        background-color: rgba(255, 255, 255, 0.568);
+        display: flex;
+        justify-content: flex-end;
+        height: 27px;
+            
     }
     
     header{
         background-color: $color-c;
-        a{
-            color: $text-color;
+        nav{
+            div{
+                display: flex;
+                justify-content: flex-start;
+                a{
+                    color: $text-color;
+                }
+            }
+        }
+    }
+
+    .sizeImg{
+        height: 25px;
+        width: 30px;
+    }        
+    
+    
+    div{
+        display: flex;
+        justify-content: center;
+        img{
+            height: 150px;
+            width: 400px;
+            margin: 30px;
         }
     }
     
-    section{
-         div{
-            
-             h1{
-             color: $color-c4;
-            Font-size: nth($size , 9);
-            text-align: center;
-            font-family: 'Source Sans Pro';
-                }
+    main{
+        color: $color-c3;
+        text-align: center;
+        div{
             h4{
-                color: $text-color1;
-                background-color: $bg-darkblue;
+                background-color: $color-c;
                 text-align: center;
-                font-size: nth($size , 1);
-                margin-top: 70px;
-             }
-             p{
-                color: $text-color;
-                text-align: center;
-                background-color: $bg-darkblue;
-                margin-top: 100px;
-                width: 150px;
-                display: flex;
-                
-            }    
-         }
-    }
-    
-    footer{
-        color: $text-color;
-        background-color: $bg-darkblue;
-        display: flex;
-        justify-content: flex-start;
+                padding: 10px;
+            }
+            p{
+                background-color: $color-c;
+                height: 40px;
+                padding: 5px;
+            }
+        }
     }
 
+    .mainIndex{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        grid-template-rows: 150px 100px 20px;
+    }
+
+    .div1{
+        grid-column: 1/3;
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+
+    .div2{
+        grid-column: 1/3;
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+
+    .footer1{
+        grid-column: 1/2;
+        position: absolute;
+        bottom: 0;
+        background-color: $color-c1;
+        margin: 0;
+
+    }
+
+    /*SERVICIO*/
+
     
+
+    h1{
+        color: white;
+        background-color: $color-c;
+        height: 80px;
+        font-size: 70px;
+        font-family: 'big shoulders display';
+        margin-top: 20px;
+        }
+
+        .divDosS {
+            height: 500px;
+            display: flex;
+            justify-content: center;
+            margin-bottom: 30px;
+        }
+
+        .fabrica{
+            height: 500px;
+            width: 800px;
+        }
+
+        .divTresS{
+            height: 80px;
+            text-align: center;
+            font-size: 15px;
+            font-style: italic;
+            border: 2px solid rgb(2, 0, 95);
+            display: flex;
+            justify-content: center;
+            margin-top: 30px;
+            animation: cambiofondoinfinito 10s infinite;
+            color: rgb(0, 0, 99);
+            font-family: 'roboto';
+        }
+        
+        @keyframes cambiofondoinfinito{
+            0%{
+                background-color: $color-c;
+            }
+        
+            20%{
+                background-color: $color-c1;
+            }
+            40%{
+                background-color: $color-c2;
+            }   
+            60%{
+                background-color: $color-c3;
+            }
+            80%{
+                background-color: $color-c2;
+            }   
+            100%{
+                background-color: $color-c1;
+            }
+                
+        }
+
+        .parrafoS{
+            color: rgb(0, 0, 109);
+        }
+
+        .footerDos{
+            background-color: $color-c;
+            color: white;
+            display: flex;
+            justify-content: flex-end;
+            align-items: flex-end;
+        }
+
+
