--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,8 @@
 @import"./base/restodelcodigo";
+@import"./base/mixin";
+@import"./base/extend";
 @import"./base/colores";
 @import"./base/listas";
 @import"./base/displays";
+@import"./base/maps";
 @import"./componentes/variables"; 
