--- a/css/style.css
+++ b/css/style.css
@@ -280,12 +280,12 @@ body {
 }
 
 section {
-  color: white;
-  border: 1px solid white;
   background-color: rgba(255, 255, 255, 0.568);
+  border: 1px solid white;
   display: flex;
   justify-content: flex-end;
   height: 27px;
+  color: white;
 }
 
 header {
@@ -354,6 +354,16 @@ main div p {
   bottom: 0;
   background-color: #1f487e;
   margin: 0;
+}
+
+.fondos1 {
+  background-color: #1d3461;
+  width: 1800px;
+  height: 100px;
+  margin-top: 40px;
+  margin: 60px;
+  text-align: center;
+  display: flex;
 }
 
 /*SERVICIO*/
