--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,3 @@
-/*SERVICIO*/
-.divCuatroS {
-  height: 30px;
-  margin-top: 30px;
-}
-
-.irInicio {
-  color: white;
-  background-color: black;
-  border: 2px solid white;
-}
-
-.audioresto {
-  margin-top: 20px;
-}
-
 /*CLIENTES*/
 .div1C {
   height: 100px;
@@ -344,7 +328,7 @@ main div p {
 
 .div2 {
   grid-column: 1/3;
-  margin-top: 30px;
+  margin-top: 100px;
   margin-bottom: 30px;
 }
 
@@ -369,69 +353,64 @@ main div p {
 /*SERVICIO*/
 h1 {
   color: white;
-  background-color: #1d3461;
   height: 80px;
   font-size: 70px;
   font-family: "big shoulders display";
   margin-top: 20px;
 }
 
-.divDosS {
+.divServicio {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(5, 1fr);
+  grid-template-rows: 100px 500px 200px 90px 20px;
+}
+
+.h1Servicio {
+  margin-left: 10px;
+  grid-row: 1/2;
+}
+
+.imagenesServicio {
+  grid-row: 2/3;
   height: 500px;
   display: flex;
-  justify-content: center;
-  margin-bottom: 30px;
+  align-items: center;
+  overflow: hidden;
 }
 
-.fabrica {
-  height: 500px;
-  width: 800px;
+.imagen1 {
+  overflow: hidden;
+  height: 300px;
+  border: 2px solid white;
 }
 
-.divTresS {
-  height: 80px;
-  text-align: center;
-  font-size: 15px;
-  font-style: italic;
-  border: 2px solid rgb(2, 0, 95);
-  display: flex;
-  justify-content: center;
-  margin-top: 30px;
-  animation: cambiofondoinfinito 10s infinite;
-  color: rgb(0, 0, 99);
-  font-family: "roboto";
+.imagen1:hover {
+  -webkit-transform: scale(1.3);
+  transform: scale(1.3);
 }
 
-@keyframes cambiofondoinfinito {
-  0% {
-    background-color: #1d3461;
-  }
-  20% {
-    background-color: #1f487e;
-  }
-  40% {
-    background-color: #376996;
-  }
-  60% {
-    background-color: #6290c8;
-  }
-  80% {
-    background-color: #376996;
-  }
-  100% {
-    background-color: #1f487e;
-  }
-}
-.parrafoS {
-  color: rgb(0, 0, 109);
-}
-
-.footerDos {
+.divServicio1 {
+  grid-row: 3/4;
   background-color: #1d3461;
+  height: 80px;
+  padding: 5px;
   color: white;
+  text-align: center;
+}
+
+.irInicio {
+  grid-row: 4/5;
+  border: 1px solid white;
+  height: 25px;
+  color: white;
+  background-color: #1d3461;
+}
+
+.formulario {
   display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 /*# sourceMappingURL=style.css.map */
