--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,7 @@
-@import"./base/restodelcodigo";
 @import"./base/colores";
 @import"./base/listas";
 @import"./base/displays";
+@import"./base/extend";
+@import"./base/maps";
+@import"./base/mixin";
 @import"./componentes/variables"; 
