--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,8 +1,9 @@
-@import"./base/restodelcodigo";
 @import"./base/mixin";
 @import"./base/extend";
 @import"./base/colores";
 @import"./base/listas";
 @import"./base/displays";
 @import"./base/maps";
+@import"./base/navBar";
+@import"./base/mediaquery";
 @import"./componentes/variables"; 
