--- a/css/style.css
+++ b/css/style.css
@@ -1,140 +1,109 @@
-/*MEDIA SCREEN*/
-@media screen and (max-width: 768px) {
-  .div1 {
-    height: 200px;
-    font-size: 100px;
-    color: white;
-    text-align: center;
-  }
-  .titulo1:hover {
-    transform: scale(2);
-    transition: all 1s;
-  }
-  .div2 {
-    height: 100px;
-    background-color: rgba(0, 0, 139, 0.932);
-    color: rgb(100, 123, 255);
-    border: 3px solid black;
-    padding: 20px;
-  }
-  .estilo1 {
-    font-size: 13px;
-    font-style: italic;
-    animation: cambioDeColor 4s;
-    text-align: center;
-  }
-  @keyframes cambioDeColor {
-    0% {
-      color: rgb(100, 123, 255);
-    }
-    25% {
-      color: rgb(50, 79, 243);
-    }
-    50% {
-      color: rgb(15, 43, 202);
-    }
-    75% {
-      color: rgb(0, 23, 155);
-    }
-    100% {
-      color: rgb(100, 123, 255);
-    }
-  }
-  .div3 {
-    height: 75px;
-    background-color: rgba(0, 0, 139, 0.932);
-    color: rgb(100, 123, 255);
-    border: 3px solid black;
-    padding: 10px;
-    text-align: center;
-    font-size: 12px;
-    margin-top: 20px;
-  }
-  .div4 {
-    height: 20px;
-    background-color: black;
-    color: rgb(184, 184, 184);
-    display: flex;
-    justify-content: flex-start;
-    margin-top: 50px;
-  }
-  .hache4 {
-    font-size: 15px;
-  }
-  .audio {
-    height: 300px;
-  }
+.header {
+  background-color: #1d3461;
+  height: 80px;
+  position: fixed;
+  width: 100%;
+  left: 0;
 }
-/*MEDIA SCREEN 320*/
-@media screen and (max-width: 320px) {
-  .div1 {
-    height: 100px;
-    font-size: 50px;
-    color: white;
-    text-align: center;
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  max-width: 992px;
+  margin: 0 auto;
+}
+
+.nav-link {
+  color: white;
+  text-decoration: none;
+}
+
+.logo {
+  font-size: 30px;
+  font-weight: bold;
+  padding: 0 40px;
+  line-height: 80px;
+}
+
+.nav-menu {
+  display: flex;
+  margin-right: 40px;
+  list-style: none;
+}
+
+.nav-menu-i {
+  font-size: 18px;
+  margin: 0 10px;
+  line-height: 75px;
+  text-transform: uppercase;
+  width: max-content;
+}
+
+.nav-menu-link {
+  padding: 2px 12px;
+  border-radius: 3px;
+}
+
+.nav-menu-link:hover {
+  transition: 0.5s;
+}
+
+.nav-toggle {
+  color: white;
+  background: none;
+  border: none;
+  font-size: 30px;
+  padding: 0 20px;
+  line-height: 60px;
+  cursor: pointer;
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .header {
+    height: 60px;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
   }
-  .div2 {
-    height: 100px;
-    background-color: rgba(0, 0, 139, 0.932);
-    color: rgb(100, 123, 255);
-    border: 3px solid black;
-    padding: 15px;
+  .logo {
+    font-size: 25px;
+    font-weight: bold;
+    padding: 0 20px;
+    line-height: 60px;
   }
-  .estilo1 {
-    font-size: 11px;
-    font-style: italic;
-    animation: cambioDeColor 4s;
-    text-align: center;
+  .nav-menu {
+    flex-direction: column;
+    align-items: center;
+    margin-right: 10px;
+    list-style: none;
+    background-color: #6290c8;
+    position: fixed;
+    top: 60px;
+    width: 100%;
+    padding: 20px 0;
+    height: calc(50% - 60px);
+    overflow-y: auto;
+    left: 100%;
+    transition: left 0.4s;
   }
-  @keyframes cambioDeColor {
-    0% {
-      color: rgb(100, 123, 255);
-    }
-    25% {
-      color: rgb(50, 79, 243);
-    }
-    50% {
-      color: rgb(15, 43, 202);
-    }
-    75% {
-      color: rgb(0, 23, 155);
-    }
-    100% {
-      color: rgb(100, 123, 255);
-    }
+  .nav-menu-i {
+    line-height: 70px;
   }
-  .div3 {
-    height: 75px;
-    background-color: rgba(0, 0, 139, 0.932);
-    color: rgb(100, 123, 255);
-    border: 3px solid black;
-    padding: 6px;
-    text-align: center;
-    font-size: 10px;
-    margin-top: 20px;
+  .nav-menu-link {
+    padding: 8px 12px;
+    border-radius: 3px;
   }
-  .div4 {
-    height: 20px;
-    background-color: black;
-    color: rgb(184, 184, 184);
-    display: flex;
-    justify-content: center;
-    margin-top: 50px;
-    padding: 3px;
+  .nav-menu-link:hover {
+    color: #376996;
+    transition: 0.5s;
   }
-  .hache4 {
-    font-size: 10px;
+  .nav-toggle {
+    display: block;
   }
-  .audio {
-    height: 300px;
-  }
-  .footerDos {
-    height: 20px;
-    color: black;
-    background-color: white;
-    position: absolute;
-    bottom: 0;
-    font-size: 10px;
+  .nav-menu-v {
+    left: 0;
   }
 }
 body {
@@ -150,7 +119,6 @@ body {
 .sectionIndex {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 1fr;
   grid-template-areas: "imgIndex" "parIndex" "imgIndex1" "parIndex1";
 }
 
@@ -161,47 +129,24 @@ section {
   justify-content: flex-end;
   height: 27px;
   color: white;
-}
-
-header {
-  background-color: #1d3461;
-}
-header nav div {
-  display: flex;
-  justify-content: flex-start;
-}
-header nav div a {
-  color: white;
+  font-size: 20px;
 }
 
 .sizeImg {
-  height: 25px;
+  height: 24px;
   width: 30px;
 }
 
-div {
+.imgLogo {
   display: flex;
+  align-items: center;
   justify-content: center;
-}
-div img {
-  height: 150px;
-  width: 400px;
-  margin: 30px;
+  margin-top: 150px;
 }
 
-main {
-  color: #6290c8;
-  text-align: center;
-}
-main div h4 {
-  background-color: #1d3461;
-  text-align: center;
-  padding: 10px;
-}
-main div p {
-  background-color: #1d3461;
-  height: 40px;
-  padding: 5px;
+.logoMedida {
+  height: 170px;
+  width: 450px;
 }
 
 .mainIndex {
@@ -221,6 +166,7 @@ main div p {
   grid-column: 1/3;
   margin-top: 100px;
   margin-bottom: 30px;
+  font-size: 25px;
 }
 
 .footer1 {
@@ -239,15 +185,18 @@ main div p {
   margin: 60px;
   text-align: center;
   display: flex;
+  color: #829cbc;
+  padding: 15px;
 }
 
-/*SERVICIO*/
+/*servicio*/
 h1 {
   color: white;
   height: 80px;
-  font-size: 70px;
+  font-size: 100px;
   font-family: "big shoulders display";
-  margin-top: 20px;
+  margin-top: 70px;
+  text-align: center;
 }
 
 .divServicio {
@@ -267,6 +216,7 @@ h1 {
   height: 500px;
   display: flex;
   align-items: center;
+  justify-content: space-around;
   overflow: hidden;
 }
 
@@ -284,24 +234,29 @@ h1 {
 .divServicio1 {
   grid-row: 3/4;
   background-color: #1d3461;
-  height: 80px;
+  height: 100px;
   padding: 5px;
   color: white;
   text-align: center;
+  font-size: 20px;
 }
 
 .irInicio {
-  grid-row: 4/5;
-  border: 1px solid white;
-  height: 25px;
+  grid-row: 3/4;
+  border: 2px solid white;
+  height: 40px;
   color: white;
   background-color: #1d3461;
+  font-size: 25px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
 }
 
-/*CLIENTES*/
+/*clientes*/
 .divClientes {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(7, 1fr);
   grid-template-rows: 110px 230px 150px;
 }
@@ -313,16 +268,18 @@ h1 {
   grid-column: 1/4;
   display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: 110px;
+  justify-content: flex-start;
+  font-size: 100px;
+  margin-top: 80px;
 }
 
 .estiloTabla {
-  grid-column: 2/3;
+  grid-column: 1/2;
   grid-row: 2/3;
-  margin-top: 30px;
   background-color: #1d3461;
   color: white;
+  margin-top: 80px;
+  margin-left: 20px;
 }
 
 th {
@@ -334,28 +291,27 @@ td {
 }
 
 .div1C {
-  grid-column: 1/4;
-  grid-row: 3/4;
+  grid-column: 3/5;
+  grid-row: 2/4;
   background-color: #829cbc;
-  height: 90px;
-  margin-top: 20px;
-  text-align: center;
-  color: #1d3461;
-  padding: 10px;
   border: 2px solid #1d3461;
+  height: 540px;
+  width: 500px;
   display: flex;
   justify-content: center;
-  align-items: center;
-  font-size: 20px;
-  margin: 20px;
+}
+
+.parrafoClientes {
+  font-size: 25px;
+  color: rgba(0, 0, 107, 0.836);
 }
 
 .div2C {
   grid-column: 1/2;
-  grid-row: 4/5;
+  grid-row: 3/4;
   display: flex;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: flex-end;
   color: white;
   text-decoration: underline overline;
 }
@@ -367,23 +323,26 @@ td {
 }
 
 .div3C {
-  grid-row: 6/7;
+  grid-row: 5/6;
   grid-column: 2/3;
 }
 
-/*CONTACTO*/
+/*contacto*/
 .formulario {
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
+  justify-content: center;
+  align-items: center;
 }
 
 .colorForm {
   color: white;
+  font-size: 18px;
 }
 
 .divDosT {
   color: white;
+  font-size: 25px;
+  text-align: center;
 }
 
 .h1Contacto {
@@ -391,22 +350,17 @@ td {
   justify-content: center;
   align-items: center;
   font-size: 80px;
-  margin-top: 20px;
-}
-
-.hacheCuatro {
-  color: white;
-  font-family: "Hubballi";
-  border: 2px solid white;
+  margin-top: 100px;
 }
 
 .BotonEnviar {
   border: 2px solid white;
-  margin: 30px;
+  margin: 20px;
   background-color: #6290c8;
+  padding: 10px;
 }
 
-/*FINAL*/
+/*final*/
 .gracias {
   display: grid;
   grid-template-columns: 1fr;
@@ -421,6 +375,9 @@ td {
 
 .div1F {
   grid-row: auto;
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
 }
 
 .gift {
@@ -432,6 +389,191 @@ td {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+/*MEDIA QUERY*/
+@media (max-width: 768px) {
+  .mainIndex {
+    width: 100%;
+  }
+  .div1 {
+    width: 100%;
+    background-color: #6290c8;
+    border: 2px solid #1d3461;
+    margin-left: 0;
+    color: #1d3461;
+    height: 150px;
+    padding: 5px;
+  }
+  .div2 {
+    width: 100%;
+    background-color: #6290c8;
+    border: 2px solid #1d3461;
+    margin-left: 0;
+    color: #1d3461;
+    height: 130px;
+    margin-top: 90px;
+    font-size: 20px;
+  }
+  .footer1 {
+    width: 100%;
+  }
+  /* servicio */
+  .imagenesServicio {
+    grid-row: 2/3;
+    height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    overflow: hidden;
+  }
+  .imagen1 {
+    overflow: hidden;
+    height: 150px;
+    border: 2px solid white;
+  }
+  .imagen1:hover {
+    -webkit-transform: scale(1.3);
+    transform: scale(1.3);
+  }
+  .divServicio1 {
+    grid-row: 3/4;
+    background-color: #1d3461;
+    height: 200px;
+    padding: 5px;
+    color: white;
+    text-align: center;
+    font-size: 18px;
+  }
+  /* clientes*/
+  .divClientes {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(6, 1fr);
+    grid-template-rows: 150px;
+  }
+  .h1Clientes {
+    height: 60px;
+    grid-row: 1/2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 80px;
+  }
+  .estiloTabla {
+    grid-row: 2/3;
+    background-color: #1d3461;
+    color: white;
+    width: 700px;
+    margin: 33px;
+  }
+  th {
+    border: 1px solid white;
+  }
+  td {
+    border: 1px solid white;
+  }
+  .div1C {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    height: 200px;
+    width: 100%;
+    margin-top: 20px;
+  }
+  .parrafoClientes {
+    font-size: 18px;
+    color: rgba(0, 0, 107, 0.836);
+  }
+  .div2C {
+    grid-column: 1/2;
+    grid-row: 5/6;
+    color: white;
+    text-decoration: underline overline;
+    margin-top: 20px;
+  }
+  .iframe {
+    grid-column: 1/2;
+    grid-row: 6/7;
+    margin-top: 10px;
+    height: 200px;
+    width: 400px;
+  }
+  .div3C {
+    grid-row: 5/6;
+    grid-column: 2/3;
+  }
+  /*contacto*/
+  .footer1 {
+    position: absolute;
+    bottom: 0;
+    background-color: #1f487e;
+    margin: 0;
+    width: 700px;
+  }
+  .hache1F {
+    font-size: 70px;
+  }
+  .gift {
+    margin-top: 50px;
+    height: 200px;
+  }
+}
+@media (max-width: 576px) {
+  .logoMedida {
+    height: 100px;
+    width: 300px;
+  }
+  .div1 {
+    width: 100%;
+    height: 170px;
+    padding: 5px;
+  }
+  .div2 {
+    width: 100%;
+    height: 140px;
+  }
+  .footer1 {
+    display: none;
+  }
+  /* servicio */
+  .divServicio1 {
+    height: 200px;
+    font-size: 15px;
+    padding: 15px;
+  }
+  /* clientes*/
+  .h1Clientes {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-left: 30px;
+  }
+  .estiloTabla {
+    width: 500px;
+  }
+  th {
+    border: 1px solid white;
+  }
+  td {
+    border: 1px solid white;
+  }
+  .div1C {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    height: 250px;
+    width: 100%;
+    margin-top: 20px;
+  }
+  .div2C {
+    display: none;
+  }
+  /*final*/
+  .hache1F {
+    font-size: 50px;
+  }
+  .gift {
+    height: 180px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
