--- a/scss/componentes/_variables.scss
+++ b/scss/componentes/_variables.scss
@@ -12,7 +12,6 @@ body{
     .sectionIndex{
         display: grid;
         grid-template-columns: repeat(4,1fr);
-        grid-template-rows: 1fr; 
         grid-template-areas: 
         "imgIndex" "parIndex" "imgIndex1" "parIndex1";
             }
@@ -24,55 +23,26 @@ body{
         justify-content: map-get($sectionInfo , justcont );
         height: map-get($sectionInfo , alto );
         color: map-get($sectionInfo , colorletra );
+        font-size: 20px;
             
-    }
-    
-    header{
-        background-color: $color-c;
-        nav{
-            div{
-                display: flex;
-                justify-content: flex-start;
-                a{
-                    color: $text-color;
-                }
-            }
-        }
     }
 
     .sizeImg{
-        height: 25px;
+        height: 24px;
         width: 30px;
     }        
     
-    
-    div{
+    .imgLogo{
         display: flex;
+        align-items: center;
         justify-content: center;
-        img{
-            height: 150px;
-            width: 400px;
-            margin: 30px;
-        }
+        margin-top: 150px;
+    }
+    .logoMedida{
+        height: 170px;
+        width: 450px;
     }
     
-    main{
-        color: $color-c3;
-        text-align: center;
-        div{
-            h4{
-                background-color: $color-c;
-                text-align: center;
-                padding: 10px;
-            }
-            p{
-                background-color: $color-c;
-                height: 40px;
-                padding: 5px;
-            }
-        }
-    }
-
     .mainIndex{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -90,6 +60,7 @@ body{
         grid-column: 1/3;
         margin-top: 100px;
         margin-bottom: 30px;
+        font-size: 25px;
     }
 
     .footer1{
@@ -102,17 +73,18 @@ body{
     }
 
     .fondos1{
-        @include fondos1()
+         @include fondos1       
     }
 
-    /*SERVICIO*/    
+    /*servicio*/    
 
     h1{
         color: white;
         height: 80px;
-        font-size: 70px;
+        font-size: 100px;
         font-family: 'big shoulders display';
-        margin-top: 20px;
+        margin-top: 70px;
+        text-align: center;
         }
 
 
@@ -133,7 +105,8 @@ body{
     grid-row: 2/3;
     height: 500px;
     display: flex;
-    align-items: center;
+    align-items:center;
+    justify-content: space-around;
     overflow: hidden;
    }
 
@@ -151,26 +124,31 @@ body{
     .divServicio1{
         grid-row: 3/4;
         background-color: $color-c;
-        height: 80px;
+        height: 100px;
         padding: 5px;
         color: white;
         text-align: center;
+        font-size: 20px;
     }
 
     .irInicio{
-        grid-row: 4/5;
-        border: 1px solid white;
-        height: 25px;
+        grid-row: 3/4;
+        border: 2px solid white;
+        height: 40px;
         color: white;
         background-color: $color-c;
+        font-size: 25px;
+        display: flex;
+        justify-content: flex-end;
+        align-items: flex-start;
     }
 
 
-/*CLIENTES*/
+/*clientes*/
 
 .divClientes{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(7, 1fr);
     grid-template-rows: 110px 230px 150px;
 
@@ -183,17 +161,18 @@ body{
     grid-column: 1/4;
     display: flex;
     align-items: center;
-    justify-content: center;
-    font-size: 110px
+    justify-content: flex-start;
+    font-size: 100px;
+    margin-top: 80px;
 }
 
 .estiloTabla{
-    grid-column: 2/3;
+    grid-column: 1/2;
     grid-row: 2/3;
-    margin-top: 30px;
     background-color: $color-c;
     color: white;
-    
+    margin-top: 80px;  
+    margin-left: 20px;   
     
    }
 
@@ -205,28 +184,28 @@ body{
    }
 
 .div1C{   
-    grid-column: 1/4;
-    grid-row: 3/4;
+    grid-column: 3/5;
+    grid-row: 2/4;
     background-color: $color-c4;
-    height: 90px;
-    margin-top: 20px;
-    text-align: center;
-    color: $color-c;
-    padding: 10px;
     border: 2px solid $color-c;
+    height: 540px;
+    width: 500px;
     display: flex;
     justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    margin: 20px;
+
+ }
+
+ .parrafoClientes{
+    font-size: 25px;
+    color: $bg-darkblue;    
  }
 
 .div2C{
     grid-column: 1/2;
-    grid-row: 4/5;
+    grid-row: 3/4;
     display: flex;
     justify-content: flex-start;
-    align-items: flex-start;
+    align-items: flex-end;
     color: white;
     text-decoration:underline overline;
     
@@ -239,25 +218,28 @@ body{
 }
 
 .div3C{
-    grid-row: 6/7;
+    grid-row: 5/6;
     grid-column: 2/3;
 }
 
-/*CONTACTO*/
+/*contacto*/
 
 
 .formulario{
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
     }
 
     .colorForm{
         color: white;
+        font-size: 18px;
     }
 
     .divDosT{
         color: white;
+        font-size: 25px;
+        text-align: center;
     }
 
     .h1Contacto{
@@ -265,21 +247,17 @@ body{
         justify-content: center;
         align-items: center;
         font-size: 80px;
-        margin-top: 20px;
-    }
-    .hacheCuatro{
-        color: white;
-        font-family: 'Hubballi';
-        border: 2px solid white;
+        margin-top: 100px;
     }
 
     .BotonEnviar{
         border: 2px solid white;
-        margin: 30px;
+        margin: 20px;
         background-color: $color-c3;
+        padding: 10px;
     }
 
-    /*FINAL*/
+    /*final*/
 
     .gracias{
         display:grid;
@@ -295,7 +273,10 @@ body{
     }
 
     .div1F{
-        grid-row: auto;           
+        grid-row: auto; 
+        display: flex; 
+        justify-content: center;
+        margin-top: 100px;         
     }
 
     .gift{
@@ -308,3 +289,231 @@ body{
         justify-content: center;
         align-items: center;
     }
+
+    /*MEDIA QUERY*/
+
+    @media (max-width: 768px){
+    
+        .mainIndex{
+            width: 100%;
+        }
+        .div1{
+            width: 100%;
+            background-color: $color-c3;
+            border: 2px solid $color-c;
+            margin-left: 0;
+            color: $color-c;
+            height: 150px;
+            padding: 5px;
+        }
+    
+        .div2{
+            width: 100%;
+            background-color: $color-c3;
+            border: 2px solid $color-c;
+            margin-left: 0;
+            color: $color-c;
+            height: 130px;
+            margin-top: 90px;
+            font-size: 20px;
+        }
+    
+        .footer1{
+            width: 100%;    
+        }
+
+    /* servicio */ 
+
+   .imagenesServicio{
+    grid-row: 2/3;
+    height: 500px;
+    display: flex;
+    align-items:center;
+    justify-content: space-around;
+    overflow: hidden;
+   }
+
+    .imagen1{
+    overflow: hidden;
+    height: 150px;
+    border: 2px solid white;
+        }
+
+   .imagen1:hover{
+        -webkit-transform:scale(1.3);transform:scale(1.3);
+    }
+       
+    .divServicio1{
+        grid-row: 3/4;
+        background-color: $color-c;
+        height: 200px;
+        padding: 5px;
+        color: white;
+        text-align: center;
+        font-size: 18px;
+    }
+
+    /* clientes*/
+
+    .divClientes{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(6, 1fr);    
+        grid-template-rows: 150px;
+    } 
+    
+    .h1Clientes{
+        height: 60px; 
+        grid-row: 1/2; 
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 80px;
+    }
+    
+    .estiloTabla{
+        grid-row: 2/3;
+        background-color: $color-c;
+        color: white;  
+        width: 700px;
+        margin: 33px;
+        
+       }
+    
+       th{
+        border: 1px solid white;
+       }
+       td{
+        border: 1px solid white;
+       }
+    
+    .div1C{   
+        grid-column: 1/2;
+        grid-row: 3/4;
+        height: 200px;
+        width: 100%;  
+        margin-top: 20px;
+     }
+    
+     .parrafoClientes{
+        font-size: 18px;
+        color: $bg-darkblue;    
+     }
+    
+    .div2C{
+        grid-column: 1/2;
+        grid-row: 5/6;
+        color: white;
+        text-decoration:underline overline;
+        margin-top: 20px;
+
+    }
+    
+    .iframe{
+        grid-column: 1/2;
+        grid-row: 6/7;
+        margin-top: 10px; 
+        height: 200px;
+        width: 400px;
+    }
+    
+    .div3C{
+        grid-row: 5/6;
+        grid-column: 2/3;
+    }
+
+    /*contacto*/
+
+    .footer1{
+        position: absolute;
+        bottom: 0;
+        background-color: $color-c1;
+        margin: 0;  
+        width: 700px;  
+        }
+
+        .hache1F{
+            font-size: 70px;
+        }
+        
+        .gift{
+            margin-top: 50px;
+            height: 200px;
+        }
+}
+    
+@media (max-width: 576px){
+
+    .logoMedida{
+        height: 100px;
+        width: 300px;
+    }
+    
+    .div1{
+        width: 100%;
+        height: 170px;
+        padding: 5px;
+    }
+
+
+    .div2{
+        width: 100%;
+        height: 140px;
+    }
+
+    .footer1{
+        display: none;
+    }
+
+/* servicio */ 
+   
+.divServicio1{
+    height: 200px;
+    font-size: 15px;
+    padding: 15px;
+}
+
+/* clientes*/
+
+.h1Clientes{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-left: 30px;
+}
+
+.estiloTabla{
+    width: 500px;   
+    }
+
+   th{
+    border: 1px solid white;
+   }
+   td{
+    border: 1px solid white;
+   }
+
+.div1C{   
+    grid-column: 1/2;
+    grid-row: 3/4;
+    height: 250px;
+    width: 100%;  
+    margin-top: 20px;
+ }
+
+.div2C{
+   display: none;
+
+}
+
+/*final*/
+
+.hache1F{
+    font-size: 50px;
+}
+
+.gift{
+    height: 180px;
+}
+
+}
